deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockticker
  labels:
    app: stockticker
spec:
  type: ClusterIP
  selector:
    app: stockticker
  ports:
    - port: 80
      targetPort: 8080
